# nanomsg

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  .uncrustify.cfg  .version  AUTHORS  CMakeLists.txt  CNAME  COPYING  Makefile.am  README  README.md  RELEASING  _config.yml  abi_version.sh  add-redirect.sh  appveyor.yml  bld.bat  community.html  configure  configure.ac  development-bindings.html  development-style.html  development.html  development2.adoc  diagrams.html  documentation-zeromq.html  documentation.html  download.html  index.html  libnanomsg.pc.in  nanomsg.7  nanomsg.examples.htm  package_version.sh  support.html  trademarks.html  uncrustify.sh  version.sh
demo/: CMakeLists.txt  README  device_demo.c  pthread_demo.c  rpc_demo.c
doc/: CMakeLists.txt  README  asciidoc.conf  asciidoc.conf.in  diag.py  genconf.c  htmldoc.css  nanocat.adoc  nanocat.txt  nanomsg.7.txt  nanomsg.txt  nn_allocmsg.3.txt  nn_allocmsg.txt  nn_allocmsg_ptr.txt  nn_bind.3.txt  nn_bind.adoc  nn_bind.txt  nn_bus.7.txt  nn_bus.txt  nn_close.3.txt  nn_close.txt  nn_cmsg.3.txt  nn_cmsg.txt  nn_connect.3.txt  nn_connect.adoc  nn_connect.txt  nn_device.3.txt  nn_device.txt  nn_env.txt  nn_errno.3.txt  nn_errno.txt  nn_fanin.7.txt  nn_fanout.7.txt  nn_freemsg.3.txt  nn_freemsg.adoc  nn_freemsg.txt  nn_get_statistic.adoc  nn_get_statistic.txt  nn_geterror.txt  nn_getsockopt.3.txt  (+82 more)
nanomsg_xp/: CMakeLists.txt
perf/: CMakeLists.txt  inproc_lat.R  inproc_lat.c  inproc_thr.c  local_lat.c  local_thr.c  remote_lat.c  remote_thr.c
src/: CMakeLists.txt  README  bus.h  fanin.h  fanout.h  inproc.h  ipc.h  nn.h  pair.h  pattern.h  pipeline.h  pkgconfig.in  protocol.h  pubsub.h  reqrep.h  sockevt.h  sp.h  stdint_inc.h  survey.h  sync.h  tcp.h  tcpmux.h  transport.h  websocket.h  ws.h
src/aio/: aio.c  aio.h  aio_posix.inc  aio_win.inc  callback.c  callback.h  ctx.c  ctx.h  fsm.c  fsm.h  iocp.c  iocp.h  poller.c  poller.h  poller_epoll.h  poller_epoll.inc  poller_kqueue.h  poller_kqueue.inc  poller_poll.h  poller_poll.inc  pool.c  pool.h  timer.c  timer.h  timer_posix.h  timer_posix.inc  timer_win.h  timer_win.inc  timerset.c  timerset.h  usock.c  usock.h  usock_posix.h  usock_posix.inc  usock_win.h  usock_win.inc  worker.c  worker.h  worker_posix.h  worker_posix.inc  (+2 more)
src/core/: README  ctx.c  ctx.h  device.c  ep.c  ep.h  epbase.c  global.c  global.h  pipe.c  poll.c  sock.c  sock.h  sockbase.c  symbol.c
src/devices/: device.c  device.h  tcpmuxd.c
src/patterns/: README
src/patterns/fanin/: sink.c  sink.h  source.c  source.h  xsink.c  xsink.h  xsource.c  xsource.h
src/patterns/fanout/: pull.c  pull.h  push.c  push.h  xpull.c  xpull.h  xpush.c  xpush.h
src/patterns/pair/: pair.c  pair.h  xpair.c  xpair.h
src/patterns/pubsub/: pub.c  pub.h  sub.c  sub.h  trie.c  trie.h
src/patterns/reqrep/: rep.c  rep.h  req.c  req.h  xrep.c  xrep.h  xreq.c  xreq.h
src/patterns/survey/: respondent.c  respondent.h  surveyor.c  surveyor.h  xrespondent.c  xrespondent.h  xsurveyor.c  xsurveyor.h
src/protocols/bus/: bus.c  bus.h  xbus.c  xbus.h
src/protocols/fanin/: sink.c  sink.h  source.c  source.h  xsink.c  xsink.h  xsource.c  xsource.h
src/protocols/fanout/: pull.c  pull.h  push.c  push.h  xpull.c  xpull.h  xpush.c  xpush.h
src/protocols/pair/: pair.c  pair.h  xpair.c  xpair.h
src/protocols/pipeline/: pull.c  push.c  push.h  xpull.c  xpush.c  xpush.h
src/protocols/pubsub/: pub.c  pub.h  sub.c  sub.h  trie.c  trie.h  xpub.c  xpub.h  xsub.c
src/protocols/reqrep/: rep.c  rep.h  req.c  req.h  task.c  task.h  xrep.c  xrep.h  xreq.c  xreq.h
src/protocols/survey/: respondent.c  respondent.h  surveyor.c  surveyor.h  xrespondent.c  xrespondent.h  xsurveyor.c  xsurveyor.h
src/protocols/sync/: master.c  master.h  mirror.c  mirror.h  xmaster.c  xmaster.h  xmirror.c  xmirror.h
src/protocols/utils/: dist.c  dist.h  excl.c  excl.h  fq.c  fq.h  lb.c  lb.h  priolist.c  priolist.h
src/transports/inproc/: ainproc.c  ainproc.h  binproc.c  binproc.h  cinproc.c  cinproc.h  inproc.c  inproc.h  inproc_ctx.c  inproc_ctx.h  inprocb.c  inprocb.h  inprocc.c  inprocc.h  ins.c  ins.h  msgpipe.c  msgpipe.h  msgqueue.c  msgqueue.h  sinproc.c  sinproc.h
src/transports/ipc/: aipc.c  aipc.h  bipc.c  bipc.h  cipc.c  cipc.h  ipc.c  ipc.h  ipca.c  ipca.h  ipcb.c  ipcb.h  ipcc.c  ipcc.h  sipc.c  sipc.h
src/transports/tcp/: atcp.c  atcp.h  btcp.c  btcp.h  ctcp.c  ctcp.h  fdtcp.c  fdtcp.h  stcp.c  stcp.h  tcp.c  tcp.h  tcpa.c  tcpa.h  tcpb.c  tcpb.h  tcpc.c  tcpc.h  tcps.c  tcps.h
src/transports/tcpmux/: atcpmux.c  atcpmux.h  btcpmux.c  btcpmux.h  ctcpmux.c  ctcpmux.h  stcpmux.c  stcpmux.h  tcpmux.c  tcpmux.h
src/transports/utils/: astream.c  astream.h  backoff.c  backoff.h  base64.c  base64.h  bstream.c  bstream.h  cstream.c  cstream.h  dns.c  dns.h  dns_getaddrinfo.h  dns_getaddrinfo.inc  dns_getaddrinfo_a.h  dns_getaddrinfo_a.inc  iface.c  iface.h  literal.c  literal.h  port.c  port.h  stream.c  stream.h  streamhdr.c  streamhdr.h  tcpmux.c  tcpmux.h
src/transports/websocket/: cws.c  sws.c  ws.c  ws_handshake.c  ws_handshake.h
src/transports/ws/: aws.c  aws.h  bws.c  bws.h  cws.c  cws.h  masker.c  masker.h  sha1.c  sha1.h  sws.c  sws.h  ws.c  ws.h  ws_handshake.c  wshdr.c  (+2 more)
src/utils/: README  addr.c  addr.h  aio.c  aio.h  aio_posix.inc  aio_win.inc  alloc.c  alloc.h  astream.c  astream.h  atomic.c  atomic.h  bstream.c  bstream.h  chunk.c  chunk.h  chunkref.c  chunkref.h  clock.c  clock.h  closefd.c  cmutex.c  cmutex.h  cond.c  cond.h  condvar.c  config.h.in  cont.h  cp.c  cp.h  cstream.c  cstream.h  dist.c  dist.h  efd.c  efd.h  efd_eventfd.h  efd_eventfd.inc  efd_pipe.h  (+78 more)
tests/: CMakeLists.txt  README  async_shutdown.c  basic.c  block.c  bug328.c  bug777.c  bug796.c  bus.c  chunks.c  cmsg.c  device.c  device4.c  device5.c  device6.c  device7.c  domain.c  emfile.c  fanin.c  fanout.c  fork.c  hash.c  inproc.c  inproc_noclose.c  inproc_shutdown.c  iovec.c  ipc.c  ipc_flood.c  ipc_pub_disconnect.c  ipc_shutdown.c  ipc_stress.c  ipc_xp_test.c  list.c  msg.c  pair.c  pipeline.c  poll.c  prio.c  pubsub.c  reqrep.c  (+24 more)
(+1262 files in other folders)
